# EI-Agent

./: Application.mk  README.md
Application/AgentEncrypt/: AgentEncrypt.c  AgentEncrypt.vcproj  AgentEncrypt.vcxproj  Makefile.am  Makefile.in  README.md  ReadMe.txt  config.h.in  configure  configure.ac
Application/CAgent/: @mote_list.ini  AdvJSON.ini  Android.mk  CAgent.rc  CAgent.vcproj  CAgent.vcxproj  Makefile.am  README.md  SNModuleConfig.ini  cagent.c  cagent.h  cagentlog.h  configure.ac  resource.h  svnversion.h
Application/CAgent/wsn/: @interface.ini  demo1.ini  demo2.ini  (+6 more)
Application/CredentialChecker/: Android.mk  CredentialChecker.c  CredentialChecker.vcproj  CredentialChecker.vcxproj  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
Application/Logd/: Android.mk  Logd.vcxproj  Makefile.am  README.md  configure.ac  logd.c  logd.h  service.c  service.h  udp-socket.c  udp-socket.h
Application/ModuleMerge/: Makefile.am  ModuleMerge.cpp  ModuleMerge.vcproj  ModuleMerge.vcxproj  README.md  configure.ac  moduleconfig.c  moduleconfig.h
Application/PlatformCheck/: Makefile.am  PlatformCheck.c  PlatformCheck.vcproj  README.md
Application/ScreenshotHelperL/: Makefile.am  README.md  ScreenshotHelperL.c  ScreenshotL.c  ScreenshotL.h  configure.ac
Application/WatchdogL/: Global.c  Global.h  Makefile.am  README.md  SAWatchdog.c  SAWatchdog.h  WatchdogCommData.h  WatchdogL.c  WatchdogL.h  WatchdogL.vcproj  WatchdogL.vcxproj  configure.ac
Lib_EI/MQTTConnector/: Android.mk  MQTTConnector.c  MQTTConnector.h  MQTTConnector.rc  MQTTConnector.vcproj  MQTTConnector.vcxproj  MQTTConnector.vcxproj.filters  MQTTConnectorEx.c  Makefile.am  Makefile.in  WISEConnector.h  WISEConnectorEx.h  resource.h
Lib_EI/MosquittoCarrier/: Android.mk  CompressionTunnel.cpp  CompressionTunnel.h  ExternalTranslator.c  ExternalTranslator.h  Makefile.am  Makefile.in  MosquittoCarrier.c  MosquittoCarrier.rc  MosquittoCarrier.vcproj  MosquittoCarrier.vcxproj  MosquittoCarrier.vcxproj.filters  MosquittoCarrierEx.c  WiseCarrierEx_MQTT.h  WiseCarrier_MQTT.h  resource.h  topic.c  topic.h  version.h
Lib_EI/WISECore/: Android.mk  Makefile.am  Makefile.in  WISECore.c  WISECore.h  WISECore.rc  WISECore.vcproj  WISECore.vcxproj  WISECore.vcxproj.filters  WISECoreEx.c  WISECoreEx.h  liteparse.c  liteparse.h  resource.h  version.h
Lib_OTA/sueclientcore/: Android.mk  README.md  SUEClientCore.rc  SUEClientCore.vcproj  SUEClientCore.vcxproj  config.h.in  configure  configure.ac  export.def  resource.h
Lib_SRP/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
Lib_SRP/SAClient/: Android.mk  Makefile.am  Makefile.in  SAClient.c  SAClient.h  SAClient.rc  SAClient.vcproj  SAClient.vcxproj  SAClient.vcxproj.filters  SAClientLog.h  eventqueue.c  eventqueue.h  export.def  msgqueue.c  msgqueue.h  resource.h  scparser.c  scparser.h  smloader.c  smloader.h  topic.c  topic.h
Lib_SRP/SAConfig/: Android.mk  Makefile.am  Makefile.in  ReadMe.txt  SAConfig.aps  SAConfig.rc  SAConfig.vcproj  SAConfig.vcxproj  SAConfig.vcxproj.filters  XMLBase.c  XMLBase.h  configuration.c  configuration.h  export.def  profile.c  profile.h  resource.h
Lib_SRP/SAGeneralHandler/: Android.mk  Makefile.am  Makefile.in  ReadMe.txt  SAGeneralHandler.aps  SAGeneralHandler.c  SAGeneralHandler.h  SAGeneralHandler.rc  SAGeneralHandler.vcproj  SAGeneralHandler.vcxproj  SAGeneralHandler.vcxproj.filters  agentupdater.c  agentupdater.h  exports.def  general_def.h  generallog.h  ghparser.c  ghparser.h  resource.h
Lib_SRP/SAHandlerLoader/: Android.mk  Makefile.am  Makefile.in  SAHandlerLoader.rc  SAHandlerLoader.vcproj  SAHandlerLoader.vcxproj  SAHandlerLoader.vcxproj.filters  SALoader.c  SALoader.h  exports.def  loaderlog.h  moduleconfig.c  moduleconfig.h  resource.h
Lib_SRP/SAManager/: Android.mk  Makefile.am  Makefile.in  ReadMe.txt  SADataSync.c  SADataSync.h  SAManager.c  SAManager.h  SAManager.rc  SAManager.vcproj  SAManager.vcxproj  SAManager.vcxproj.filters  SAManagerLog.h  exports.def  ghloader.c  ghloader.h  hlloader.c  hlloader.h  keepalive.c  keepalive.h  pktparser.c  pktparser.h  reloader.c  reloader.h  resource.h  topic.c  topic.h  version.h
Library3rdParty/cjson/: Android.mk  README.md  cJSON.vcproj  cJSON.vcxproj  configure.ac
Library3rdParty/smarttools/: Makefile.am  Makefile.in  README.md  configure  configure.ac
Library3rdParty/sqlite/: Android.mk  SQLite.vcproj  SQLite.vcxproj  configure.ac
Library3rdParty/websockify/: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
Modules/DataSync/: Android.mk  DataSync.aps  DataSync.cpp  DataSync.h  DataSync.rc  DataSync.vcproj  DataSync.vcxproj  Makefile.am  Makefile.in  README.md  TestHandler.c  buildtest.sh  config.h.in  configure  configure.ac  exports.def  resource.h  testCtrl.c
Modules/HDDHandler/: HDDHandler.c  HDDHandler.h  HDDHandler.vcproj  HDDHandler.vcxproj  HDDLog.h  Makefile.am  Makefile.in  README.md  ReadMe.txt  SQRam.cpp  SQRam.h  WMIHelper.cpp  WMIHelper.h  config.h.in  configure  configure.ac  export.def  resource.h
Platform/: Android.mk  IPCCommData.h  Makefile.am  NamedPipeClient.h  NamedPipeServer.h  WISEPlatform.h  WISEPlatform.rc  WISEPlatform.vcproj  WISEPlatform.vcxproj  WISEUtil.rc  WISEUtil.vcproj  WISEUtil.vcxproj  basequeue.c  basequeue.h  configure.ac  export.h  network.h  resource.h  resource1.h  service.h  svnversion.h  util_libloader.h  util_os.h  util_path.h  util_pipe.h  util_power.h  util_process.h  util_storage.h  util_string.h  version.h
Platform/Linux/: NamedPipeClient.c  NamedPipeServer.c  binding.h  network.c  service.c  util_libloader.c  util_os.c  util_path.c  util_pipe.c  util_power.c  util_process.c  util_storage.c  util_string.c  wrapper.h
Platform/Windows/: NamedPipeClient.c  NamedPipeServer.c  binding.h  dlfcn.c  dlfcn.h  getopt.cpp  getopt.h  network.c  pthread.c  pthread.h  service.c  stdbool.h  unistd.h  util_libloader.c  util_os.c  util_path.c  util_pipe.c  util_power.c  util_process.c  util_storage.cpp  util_string.c  wrapper.h
(+1235 files in other folders)
